--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 RAPID_API_KEY=4b0a782fe5msh894b9664e752704p17549bjsnef74d58725fd
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3F1YXJlLXdhc3AtMjAuY2xlcmsuYWNjb3VudHMuZGV2JA
