--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.19.3",
+    "@react-navigation/drawer": "^6.6.4",
     "appwrite": "^13.0.0",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
